Swagger update: no ssl YET
