# cmd/api/main.go
@@ -12,7 +12,8 @@ import (
 // @title Paste API
 // @version 1.0
 // @description This is a Paste API server. It is used to publish, read, edit text posts.
-// @host localhost:8080
+// @host http://localhost:8080
+// @schemes http
 // @securityDefinitions.apikey Bearer
 // @in header
 // @name Authorization
